# spice-xpi

./: .gitignore  .gitmodules  Makefile.am  NEWS  autogen.sh  configure.ac
SpiceXPI/: Makefile.am
SpiceXPI/src/: install.rdf
SpiceXPI/src/plugin/: Makefile.am  controller-unix.cpp  controller-unix.h  controller-win.cpp  controller-win.h  controller.cpp  controller.h  debug.h  glib-compat.c  glib-compat.h  np_entry.cpp  npapi-plugin.syms  npn_gate.cpp  npp_gate.cpp  npplat.h  nsISpicec.idl  nsScriptablePeer.cpp  nsScriptablePeer.h  nsScriptablePeerBase.cpp  plugin.cpp  plugin.h  resource.rc
data/: Makefile.am  test.html
generator/: Makefile.am  README  attribute.h  generator.cpp  generator.h  main.cpp  method.h  options.cpp  options.h  parser.cpp  parser.h  redirecthelper.cpp  redirecthelper.h  scanner.cpp  scanner.h  token.h
