if BUILD_GENERATOR
bin_PROGRAMS                = spice-xpi-generator
spice_xpi_generator_SOURCES = \
	attribute.h           \
	generator.cpp         \
	generator.h           \
	main.cpp              \
	method.h              \
	options.cpp           \
	options.h             \
	parser.cpp            \
	parser.h              \
	redirecthelper.cpp    \
	redirecthelper.h      \
	scanner.cpp           \
	scanner.h             \
	token.h
endif
